fixed about page, added space for links, fixes spacing on various pages, added styling to title on nav to account for potential background image colors

--- a/src/index.css
+++ b/src/index.css
@@ -61,9 +61,19 @@ code {
 }
 
 .page-height {
-  height:200vh;
+  height: auto;
 }
 
 .divider {
   border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.text-background {
+ background-color: rgba(255, 255, 255, 0.314);
+ border-radius: 5px;
+}
+
+.centertext {
+  margin-left: 5%;
+  margin-right: 5%;
 }
